Closed
Bug 1659852
Opened 5 years ago
Closed 5 years ago
Assertion failure: !cx->isExceptionPending() with dumpStencil with smoosh+module
Categories
(Core :: JavaScript Engine, defect, P3)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
81 Branch
Tracking | Status | |
---|---|---|
firefox81 | --- | fixed |
People
(Reporter: arai, Assigned: arai)
References
Details
Attachments
(1 file)
testcase:
dumpStencil("foo", {smoosh: true, module: true})
result:
Assertion failure: !cx->isExceptionPending(), at .../mozilla-unified/js/src/vm/Interpreter.cpp:510
Assignee | ||
Comment 1•5 years ago
|
||
Pushed by arai_a@mac.com:
https://hg.mozilla.org/integration/autoland/rev/649c8a754d00
Properly report error in dumpStencil with smoosh + module. r=jorendorff
Comment 3•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox81:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•