Bug 1659852 - Properly report error in dumpStencil with smoosh + module. r=jorendorff

Differential Revision: https://phabricator.services.mozilla.com/D87515